--- a/Projecto/.project
+++ b/Projecto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Projecto</name>
+	<name>Stock</name>
 	<comment></comment>
 	<projects>
 	</projects>
